Fixed the following: * Styling issues (padding / borders) * Scrolling on table header doesn't scroll table body (sort of - sometimes the body still lags behind the header) Still need to address: * Autosizer not shrinking width (might be related to https://github.com/bvaughn/react-virtualized/issues/68) * overflow:hidden on table header clips dropdowns * Clicking expander causes scroll position to jump

--- a/mlflow/server/js/src/components/ExperimentView.css
+++ b/mlflow/server/js/src/components/ExperimentView.css
@@ -223,7 +223,7 @@ span.error-message {
 }
 
 /* Workaround as per https://github.com/bvaughn/react-virtualized/issues/876#issuecomment-367029529 */
-.ReactVirtualized__Table__rowColumn {
+.ExperimentView .ReactVirtualized__Table__rowColumn {
   overflow: visible !important;
 }
 
@@ -237,4 +237,8 @@ span.error-message {
 
 .ReactVirtualized__Table  .BaggedCell .run-table-container {
   padding: 4px;
+}
+
+.ExperimentView .ReactVirtualized__Grid {
+  overflow: visible !important;
 }
